--- a/content/posts/context-devtool.mdx
+++ b/content/posts/context-devtool.mdx
@@ -1,7 +1,7 @@
 ---
 title: React Context DevTool ⚛️
 summary: Depurar Context API de ReactJS con React Context Devtool
-bodyHighlight: true
+draft: true
 publishedAt: "2021-08-16T22:00:00.000Z"
 ---
 
