--- a/content/posts/touchpad.mdx
+++ b/content/posts/touchpad.mdx
@@ -1,7 +1,7 @@
 ---
 title: Restaurar Touchpad en Ubuntu
 summary: Volver a hacer que funcione el maldito touchpad
-bodyHighlight: true
+draft: true
 publishedAt: "2021-07-12T22:00:00.000Z"
 ---
 
