--- a/content/posts/backend.mdx
+++ b/content/posts/backend.mdx
@@ -1,7 +1,7 @@
 ---
 title: Trabajar con backend y debug en React ⚛️
 summary: Volver a hacer que funcione el maldito touchpad
-bodyHighlight: true
+draft: true
 publishedAt: "2021-08-08T22:00:00.000Z"
 ---
 
