--- a/content/posts/class-components.mdx
+++ b/content/posts/class-components.mdx
@@ -1,7 +1,7 @@
 ---
 title: Class Components ⚛️
 summary: Los class components y los ciclos de vida en React
-bodyHighlight: true
+draft: true
 publishedAt: "2021-08-08T22:00:00.000Z"
 ---
 
