--- a/content/posts/functional-components.mdx
+++ b/content/posts/functional-components.mdx
@@ -1,7 +1,7 @@
 ---
 title: Functional Components ⚛️
 summary: Explicación general de los componentes función
-bodyHighlight: true
+draft: true
 publishedAt: "2021-08-02T22:00:00.000Z"
 ---
 
