--- a/content/posts/hooks.mdx
+++ b/content/posts/hooks.mdx
@@ -1,7 +1,7 @@
 ---
 title: Hooks ⚛️
 summary: Resumen y uso de los Hooks en React
-bodyHighlight: true
+draft: true
 publishedAt: "2021-08-04T22:00:00.000Z"
 ---
 
