--- a/content/posts/instalar-mongo.mdx
+++ b/content/posts/instalar-mongo.mdx
@@ -1,7 +1,7 @@
 ---
 title: Instalar MongoDB en Ubuntu 20.04
 summary: Cómo instalar MongoDB y Robo 3T en Ubuntu
-bodyHighlight: true
+draft: true
 publishedAt: "2021-07-07T22:00:00.000Z"
 ---
 
