--- a/content/posts/intro.mdx
+++ b/content/posts/intro.mdx
@@ -1,7 +1,7 @@
 ---
 title: Introducción a React ⚛️
 summary: Breves apuntes sobre la introducción a React
-bodyHighlight: true
+draft: true
 publishedAt: "2021-08-01T22:00:00.000Z"
 ---
 
