--- a/content/posts/js-react-dos.mdx
+++ b/content/posts/js-react-dos.mdx
@@ -9,7 +9,7 @@ tags:
     - es6
     - spread
     - destructuring
-bodyHighlight: true
+draft: true
 publishedAt: '2021-06-13T22:00:00.000Z'
 ---
 
