--- a/content/posts/vscode-plugins.mdx
+++ b/content/posts/vscode-plugins.mdx
@@ -2,6 +2,7 @@
 title: Plugins para VS Code
 summary: Colección de plugings para VS Code
 category: herramientas
+draft: true
 publishedAt: '2021-06-07T22:00:00.000Z'
 ---
 
