--- a/content/posts/firefox-developer.mdx
+++ b/content/posts/firefox-developer.mdx
@@ -1,7 +1,7 @@
 ---
 title: Instalar Firefox Developer Edition en Ubuntu 20.04
 summary: Cómo instalar Firefox Developer Edition y crear un acceso directo
-draft: true
+draft: false
 publishedAt: "2021-07-15T22:00:00.000Z"
 ---
 
