--- a/content/posts/conceptos-avanzados.mdx
+++ b/content/posts/conceptos-avanzados.mdx
@@ -1,7 +1,7 @@
 ---
 title: Conceptos avanzados ⚛️
 summary: Apuntes sobre Error Boundaries, Fragment y HOC
-draft: true
+draft: false
 publishedAt: "2021-08-05T22:00:00.000Z"
 ---
 
