--- a/content/posts/configurar-ubuntu.mdx
+++ b/content/posts/configurar-ubuntu.mdx
@@ -1,7 +1,7 @@
 ---
 title: Configurar Ubuntu 20.04 / 21.04
 summary: Instalación de utilidades para desarrollo en Ubuntu 20.04 y 21.04
-draft: true
+draft: false
 publishedAt: "2021-07-17T22:00:00.000Z"
 ---
 
