--- a/content/posts/context-api.mdx
+++ b/content/posts/context-api.mdx
@@ -1,7 +1,7 @@
 ---
 title: Context API ⚛️
 summary: Cómo Context API puede sustituir a Redux
-draft: true
+draft: false
 publishedAt: "2021-08-06T22:00:00.000Z"
 ---
 
