--- a/content/posts/functional-components.mdx
+++ b/content/posts/functional-components.mdx
@@ -1,7 +1,7 @@
 ---
 title: Functional Components ⚛️
 summary: Explicación general de los componentes función
-draft: true
+draft: false
 publishedAt: "2021-08-02T22:00:00.000Z"
 ---
 
