--- a/content/posts/indice.mdx
+++ b/content/posts/indice.mdx
@@ -1,7 +1,7 @@
 ---
 title: Apuntes de React ⚛️
 summary: Apuntes completos sobre React y su API
-draft: true
+draft: false
 publishedAt: "2021-07-31T22:00:00.000Z"
 ---
 
