--- a/content/posts/router.mdx
+++ b/content/posts/router.mdx
@@ -1,7 +1,7 @@
 ---
 title: React Router ⚛️
 summary: Cómo utilizar la librería de React Router
-draft: true
+draft: false
 publishedAt: "2021-08-07T22:00:00.000Z"
 ---
 
