--- a/content/pages/blog.mdx
+++ b/content/pages/blog.mdx
@@ -1,5 +1,9 @@
 ---
 blocks:
-  - _template: postList
+  - search:
+      placeholder: Buscar
+      active: true
+      maxPosts: 15
+    _template: postList
 ---
 
