--- a/content/pages/home.mdx
+++ b/content/pages/home.mdx
@@ -1,1 +1,12 @@
+---
+blocks:
+  - tagline: Frontend Engineer
+    headline: ansango
+    text: >-
+      Otro blog más de tecnología y desarrollo. No escribo sobre nada nuevo que
+      no se haya escrito ya. Hago fotografía en película y a veces me acuesto
+      tarde.
+    type: avatar
+    _template: hero
+---
 
