--- a/content/posts/react/class-components.mdx
+++ b/content/posts/react/class-components.mdx
@@ -1,6 +1,7 @@
 ---
 title: Class Components ⚛️
-summary: Los class components y los ciclos de vida en React
+summary: Class components y ciclos de vida
+featured: true
 draft: false
 publishedAt: '2021-08-08T22:00:00.000Z'
 ---
