--- a/content/posts/react/context-api.mdx
+++ b/content/posts/react/context-api.mdx
@@ -2,6 +2,7 @@
 title: Context API ⚛️
 summary: Cómo Context API puede sustituir a Redux
 category: react
+featured: true
 draft: false
 publishedAt: '2021-08-06T22:00:00.000Z'
 ---
