--- a/content/posts/react/context-api.mdx
+++ b/content/posts/react/context-api.mdx
@@ -1,7 +1,10 @@
 ---
-title: Context API ⚛️
+title: Context API
 summary: Cómo Context API puede sustituir a Redux
 category: react
+tags:
+  options:
+    - react
 featured: true
 draft: false
 publishedAt: '2021-08-06T22:00:00.000Z'
