--- a/content/posts/react/router.mdx
+++ b/content/posts/react/router.mdx
@@ -1,6 +1,10 @@
 ---
-title: React Router ⚛️
+title: React Router
 summary: Cómo utilizar la librería de React Router
+category: react
+tags:
+  options:
+    - react
 featured: true
 draft: false
 publishedAt: '2021-08-07T22:00:00.000Z'
