--- a/content/posts/react/class-components.mdx
+++ b/content/posts/react/class-components.mdx
@@ -1,6 +1,10 @@
 ---
-title: Class Components ⚛️
+title: Class Components
 summary: Class components y ciclos de vida
+category: react
+tags:
+  options:
+    - react
 featured: true
 draft: false
 publishedAt: '2021-08-08T22:00:00.000Z'
