--- a/content/posts/react/conceptos-avanzados.mdx
+++ b/content/posts/react/conceptos-avanzados.mdx
@@ -1,6 +1,11 @@
 ---
-title: Conceptos avanzados ⚛️
+title: Conceptos avanzados
 summary: 'Apuntes sobre Error Boundaries, Fragment y HOC'
+category: react
+tags:
+  options:
+    - hoc
+    - react
 draft: false
 publishedAt: '2021-08-05T22:00:00.000Z'
 ---
