--- a/content/pages/home.mdx
+++ b/content/pages/home.mdx
@@ -8,6 +8,12 @@ blocks:
       tarde.
     type: avatar
     _template: hero
-  - _template: postFeaturedList
+  - _template: stats
+  - init: 0
+    limit: 6
+    _template: postFeaturedList
+  - init: 0
+    limit: 6
+    _template: postLatestsList
 ---
 
