--- a/content/pages/home.mdx
+++ b/content/pages/home.mdx
@@ -10,6 +10,9 @@ blocks:
     _template: hero
   - _template: stats
   - init: 0
+    limit: 4
+    _template: postMostViewedList
+  - init: 0
     limit: 6
     _template: postFeaturedList
   - init: 0
