--- a/content/posts/bookmarks/frontend-starter.mdx
+++ b/content/posts/bookmarks/frontend-starter.mdx
@@ -1,6 +1,10 @@
 ---
 title: "Frontend Starter \U0001F516"
-summary: Recursos para aprender
+summary: >-
+  Aprender frontend es una de las cosas, para mí, más satisfactorias que
+  existen. Programamos y creamos contenido. Es adictivo. Y una vez controlas un
+  poco como funciona el ecosistema no puedes querer parar de aprender y
+  aprender.
 category: bookmarks
 tags:
   options:
@@ -9,8 +13,6 @@ tags:
 draft: false
 publishedAt: '2021-10-10T22:00:00.000Z'
 ---
-
-Aprender frontend es una de las cosas, para mí, más satisfactorias que existen. Programamos y creamos contenido. Es adictivo. Y una vez controlas un poco como funciona el ecosistema no puedes querer parar de aprender y aprender.
 
 ## HTML
 
@@ -114,3 +116,4 @@ Aprender frontend es una de las cosas, para mí, más satisfactorias que existen
   * [Codepen](https://codepen.io/ "")
 
 ## [TypeScript](https://www.typescriptlang.org/ "")
+
