--- a/content/posts/bookmarks/formacion.mdx
+++ b/content/posts/bookmarks/formacion.mdx
@@ -1,6 +1,10 @@
 ---
 title: "Formación \U0001F516"
-summary: Recursos para aprender
+summary: >-
+  Empezar en esto es difícil, ya no porque tengas que estudiar mucho, más bien
+  porque tienes que formarte constantemente. A veces cuesta seguir el ritmo,
+  pero bueno para eso está esta entrada, para que de vez en cuando eches un ojo
+  a ver que se cuece en el panorama.
 category: bookmarks
 tags:
   options:
@@ -9,8 +13,6 @@ tags:
 draft: false
 publishedAt: '2021-09-30T22:00:00.000Z'
 ---
-
-Empezar en esto es difícil, ya no porque tengas que estudiar mucho, más bien porque tienes que formarte constantemente. A veces cuesta seguir el ritmo, pero bueno para eso está esta entrada, para que de vez en cuando eches un ojo a ver que se cuece en el panorama.
 
 ## Chuletas e itinerarios
 
@@ -139,3 +141,4 @@ Y por último las listas de cosas. Con esto puedes perder horas, días o puedes 
 * **Otras listas**
   * [Awesome Bots](https://github.com/invocable/awesome-bots "")
   * [Awesome Emails](https://github.com/jonathandion/awesome-emails "")
+
