--- a/content/posts/bookmarks/configuraciones.mdx
+++ b/content/posts/bookmarks/configuraciones.mdx
@@ -1,6 +1,10 @@
 ---
 title: "Configuraciones \U0001F516"
-summary: Para configurar tu equipo
+summary: >-
+  Esta entrada de marcadores va a dedicarse sobre todo a recursos que tengan que
+  ver con el sistema operativo, la terminal de comandos, navegadores, controles
+  de versiones y repositorios, editores de código y plugins, herramientas para
+  escribir código limpio y otras herramientas en general.
 category: bookmarks
 tags:
   options:
@@ -10,8 +14,6 @@ featured: true
 draft: false
 publishedAt: '2021-09-25T22:00:00.000Z'
 ---
-
-Esta entrada de marcadores va a dedicarse sobre todo a recursos que tengan que ver con el sistema operativo, la terminal de comandos, navegadores, controles de versiones y repositorios, editores de código y plugins, herramientas para escribir código limpio y otras herramientas en general.
 
 ## SO, Terminal y Navegadores
 
@@ -104,3 +106,4 @@ Bueno pues aquí algunas de las herramientas que te ayudarán a superar el drama
 * [EditorConfig](https://editorconfig.org/ "") - EditorConfig nos ayudará a establecer un conjunto de reglas para mantener la forma en la que escribimos código. Imagina que en tu equipo tu usas VSCode pero tu compañero usa Atom y no tiene las mismas tabulaciones. Con esta herramienta tendremos una misma manera de leer y escribir código.
 * [Lint-Staged](https://github.com/okonet/lint-staged "") - ejecutará linters en los staged files, para que el bad code no se suba tu rama.
 * [Husky](https://github.com/typicode/husky "") - básicamente te permite hacer Git hook. Esto significa que puedes realizar ciertas acciones cuando estás a punto de confirmar o cuando estás a punto de empujar el código a una rama.
+
