--- a/content/posts/react/backend.mdx
+++ b/content/posts/react/backend.mdx
@@ -1,15 +1,13 @@
 ---
 title: Backend y debug en React
-summary: Volver a hacer que funcione el maldito touchpad
+summary: >
+  Las formas más habituales de comunicarnos con backend en React son axios o 
+  fetch. Tanto axios como fetch están basados en promesas.
+category: react
+tags: {}
 draft: false
 publishedAt: '2021-08-08T22:00:00.000Z'
 ---
-
-
-
-Para comunicarnos con la parte de backend hay diferentes formas de hacerlo, básicamente lo que necesitamos es una forma de comunicarnos a través de `http`. Las formas más habituales de hacerlo en React, es a través de la librería `axios` o bien con `fetch`.
-
-Tanto `axios` como `fetch` están basados en promesas.
 
 ## Fetch
 
@@ -35,7 +33,7 @@ fetch(url, options).then((response) => console.log(response.status));
 
 En `fetch` no tenemos una transformación directa a `JSON`, por lo que tendremos que convertir la respuesta para poder manejarla.
 
-- ¿Cómo lo convertiríamos?
+* ¿Cómo lo convertiríamos?
 
 ```javascript
 fetch("https://myapi.com/user")
@@ -49,15 +47,15 @@ fetch("https://myapi.com/user")
   });
 ```
 
-> Puedes leer una guía completa acerca de `fetch API` <a href="/blog/javascript/fetch-api" target="_blank" rel="noopener noreferrer">aquí</a>
+> Puedes leer una guía completa acerca de `fetch API` [aquí](/blog/javascript/fetch-api "")
 
 ## Axios
 
 `axios` es un cliente `http` basado en promesas que normalmente es usado con React, lo que podemos hacer es comunicarnos con el servidor, además de proporcionarnos las siguientes características:
 
-- Interceptores de peticiones y respuestas, si por ejemplo necesitamos meter un token, podemos crear un interceptor que es el encargado de obtenerlo e insertarlo en las cabeceras para luego hacer una petición.
-- Transforma los datos obtenidos en las respuestas a `JSON` directamente.
-- Nos permite cancelar las peticiones.
+* Interceptores de peticiones y respuestas, si por ejemplo necesitamos meter un token, podemos crear un interceptor que es el encargado de obtenerlo e insertarlo en las cabeceras para luego hacer una petición.
+* Transforma los datos obtenidos en las respuestas a `JSON` directamente.
+* Nos permite cancelar las peticiones.
 
 Para instalarlo podemos ejecutar el siguiente comando en terminal:
 
@@ -91,12 +89,12 @@ axios(options).then((response) => console.log(response.status));
 
 ### Soporte
 
-- `fetch`, tiene menos soporte, sobre todo por los más antiguos.
-- `axios`, tiene menos problema ya que es soportado por la mayoría de navegadores.
+* `fetch`, tiene menos soporte, sobre todo por los más antiguos.
+* `axios`, tiene menos problema ya que es soportado por la mayoría de navegadores.
 
 ### Timeouts
 
-- `fetch`, es más enrevesado crear timeouts.
+* `fetch`, es más enrevesado crear timeouts.
 
 ```javascript
 const controller = new AbortController();
@@ -113,7 +111,7 @@ promise
   .catch((error) => console.error(error));
 ```
 
-- `axios`, podemos crear timeouts fácilmente.
+* `axios`, podemos crear timeouts fácilmente.
 
 ```javascript
 axios({
@@ -128,7 +126,7 @@ axios({
 
 ### Transformación automática a JSON
 
-- `fetch`, no tenemos transformación automática, hay que realizarla encadenando promesas.
+* `fetch`, no tenemos transformación automática, hay que realizarla encadenando promesas.
 
 ```javascript
 fetch("https://myapi.com/profile")
@@ -137,7 +135,7 @@ fetch("https://myapi.com/profile")
   .catch((error) => console.error(error));
 ```
 
-- `axios`, la tenemos en el objeto `response.data`.
+* `axios`, la tenemos en el objeto `response.data`.
 
 ```javascript
 axios.get("https://myapi.com/profile").then(
@@ -152,51 +150,49 @@ axios.get("https://myapi.com/profile").then(
 
 ### Interceptores
 
-- `fetch`, no tenemos por defecto una manera provista para hacer interceptores de las peticiones. Podríamos reescribir el método global de fetch y definir nuestro propio interceptor.
+* `fetch`, no tenemos por defecto una manera provista para hacer interceptores de las peticiones. Podríamos reescribir el método global de fetch y definir nuestro propio interceptor.
+* `axios`,
+* podríamos crear un interceptor general:
 
-- `axios`,
+```javascript
+axios.interceptors.request.use((config) => {
+  config.header["key"] = "example";
+  return config;
+});
 
-  - podríamos crear un interceptor general:
+axios.interceptors.response.use((res) => {
+  console.log(res.data);
+  return res;
+});
+```
 
-    ```javascript
-    axios.interceptors.request.use((config) => {
-      config.header["key"] = "example";
-      return config;
-    });
+* o bien crear una instancia (nos permite estandarizar varios tipos de peticiones):
 
-    axios.interceptors.response.use((res) => {
-      console.log(res.data);
-      return res;
-    });
-    ```
+```javascript
+const instance = axios.create({
+  baseURL: "https://myapi.com",
+  timeout: 1000,
+  headers: { "X-Custom-Header": "foobar" },
+});
 
-    - o bien crear una instancia (nos permite estandarizar varios tipos de peticiones):
-
-    ```javascript
-    const instance = axios.create({
-      baseURL: 'https://some-domain.com/api/',
-      timeout: 1000,
-      headers: { 'X-Custom-Header': 'foobar' },
-    })
-
-    instance.get(...)
-    ```
+instance.get(...)
+```
 
 ### Barra de progreso
 
-- `fetch`, no está provista.
-- `axios`, tenemos el módulo `Axios Progress Bar`.
+* `fetch`, no está provista.
+* `axios`, tenemos el módulo `Axios Progress Bar`.
 
 ## Uso en React
 
 Antes de empezar a consumir datos en nuestra aplicación, sería recomendable tener instalado lo siguiente:
 
-- **React Developer Tools**: podemos depurar nuestra aplicación en React con las Developer Tools provistas para [Chrome](https://chrome.google.com/webstore/detail/react-developer-tools/fmkadmapgofadopljbjfkapdkoienihi?hl=en) y [Firefox](https://addons.mozilla.org/en-US/firefox/addon/react-devtools/).
-- **Servidor mock**: existen varias opciones, pero podemos utilizar [`dyson`](https://github.com/webpro/dyson), que nos da un servidor mock bastante completo.
+* **React Developer Tools**: podemos depurar nuestra aplicación en React con las Developer Tools provistas para [Chrome](https://chrome.google.com/webstore/detail/react-developer-tools/fmkadmapgofadopljbjfkapdkoienihi?hl=en "") y [Firefox](https://addons.mozilla.org/en-US/firefox/addon/react-devtools/ "").
+* **Servidor mock**: existen varias opciones, pero podemos utilizar [`dyson`](https://github.com/webpro/dyson ""), que nos da un servidor mock bastante completo.
 
 ### Consumo de datos
 
-- HelpDetail
+* HelpDetail
 
 ```javascript
 import React, { useEffect, useState } from "react";
@@ -232,7 +228,7 @@ const HelpDetail = (props) => {
 export default HelpDetail;
 ```
 
-- AllergenDetail
+* AllergenDetail
 
 ```javascript
 import React, { useState, useEffect } from "react";
@@ -269,4 +265,4 @@ export default AllergenDetail;
 
 ❤️ Espero que te haya gustado la entrada.
 
-Congrats! 🎊 has llegado al final de esta guía, puedes volver al capítulo anterior de [React Router](/blog/react/router), o volver al [Índice](/blog/react/indice).
+Congrats! 🎊 has llegado al final de esta guía, puedes volver al capítulo anterior de [React Router](/blog/react/router ""), o volver al [Índice](/blog/react/indice "").
