--- a/content/posts/javascript/ajax-async-await.mdx
+++ b/content/posts/javascript/ajax-async-await.mdx
@@ -1,6 +1,9 @@
 ---
 title: Usar async await con jQuery y ajax
-summary: Convertir una petición ajax de jQuery en async/await ES8
+summary: >-
+  async/await es una característica bastante nueva. Fue añadida en la
+  especificación ES2017 hace 4 años más o menos y ahora está disponible de forma
+  nativa en la mayoría de los navegadores modernos. 
 category: javascript
 tags:
   options:
@@ -12,14 +15,6 @@ tags:
 draft: false
 publishedAt: '2021-06-05T22:00:00.000Z'
 ---
-
-Si eres como yo, probablemente estarás aburrido de usar peticiones `ajax` con jQuery. Es algo que está en todas partes, en miles y miles de proyectos.
-
-No he venido a criticar jQuery, de hecho, me parece una librería super útil, que ahorra tiempo y a la que por alguna razón le he cogido cariño.
-
-`async/await` es una característica bastante nueva. Fue añadida en la especificación ES2017 hace 4 años más o menos y ahora está disponible de forma nativa en la mayoría de los navegadores modernos. No hay razón para no usarla en tu código JavaScript actual.
-
-Si quieres soportar navegadores más antiguos (o el viejo IE), tendrás que usar un transpilador como Babel para que funcione en navegadores antiguos.
 
 ## En la época de ajax 🧓
 
