--- a/content/posts/javascript/fetch-api.mdx
+++ b/content/posts/javascript/fetch-api.mdx
@@ -1,11 +1,13 @@
 ---
 title: fetch API
 summary: El pasado Ajax y el presente con Fetch API
+category: javascript
 tags:
-  javascript:
-    - javascript
+  options:
     - fetch
     - ajax
+    - jquery
+    - promises
 draft: false
 publishedAt: '2021-06-06T22:00:00.000Z'
 ---
