--- a/content/posts/javascript/js-react-dos.mdx
+++ b/content/posts/javascript/js-react-dos.mdx
@@ -1,14 +1,11 @@
 ---
-title: JavaScript para React ⚛️ - II
+title: JavaScript para React - II
 summary: Segunda parte del resumen de las mejoras de ES6 más útiles para React
+category: javascript
 tags:
-  react:
+  options:
     - react
-  javascript:
     - javascript
-    - es6
-    - spread
-    - destructuring
 draft: false
 publishedAt: '2021-06-13T22:00:00.000Z'
 ---
