--- a/content/posts/javascript/js-react-uno.mdx
+++ b/content/posts/javascript/js-react-uno.mdx
@@ -1,12 +1,11 @@
 ---
-title: JavaScript para React ⚛️ - I
+title: JavaScript para React - I
 summary: Primera parte del resumen de las mejoras de ES6 más útiles para React
+category: javascript
 tags:
-  react:
-    - react
-  javascript:
+  options:
     - javascript
-    - es6
+    - react
 draft: false
 publishedAt: '2021-06-13T22:00:00.000Z'
 ---
