--- a/content/posts/javascript/reduce.mdx
+++ b/content/posts/javascript/reduce.mdx
@@ -1,24 +1,11 @@
 ---
 title: Array Reduce
 summary: Cómo usar array reduce
-tags:
-  javascript:
-    - javascript
-    - es6
-    - reduce
+category: javascript
+tags: {}
 draft: false
 publishedAt: '2021-06-08T22:00:00.000Z'
 ---
-
-Gracias a `ES6` y las nuevas ventajas que trae consigo, programar mediante arrow functions funcionalmente nos hace escribir código muy legible.
-
-Cuando empecé en esto de la programación he de reconocer que se me iba la cabeza. Tenia que entender paradigmas, como programar, tipos de datos, manejo de los mismos, métodos y herramientas del lenguaje y un montón de tecnologías que aun mi cabeza no había digerido.
-
-Poco a poco fui entendiedo muchas cosas y mi cabeza fue ordenando todo.
-
-Un buen dia, realizando una practica del master, teníamos que preparar ejercicios con los diversos métodos de Javascript para tratar arrays. Seguía mucho la documentación de [MDN](https://developer.mozilla.org/es/ "") (fantástica por cierto), y me tope con reduce. He de decir que en general el resto de métodos me han costado poco (el resto de métodos famosos, claro está ), pero a la hora de trabajar con reduce, me atraganté un poco.
-
-No ha sido hasta hace bien poco que he comprendido como se utiliza en algunos aspectos y la versatilidad que puede ofrecernos a la hora de trabajar (seguramente antes estaría siempre haciendo todo con map, filter, find o includes).
 
 ## Qué hace reduce?
 
