--- a/content/posts/react/hooks.mdx
+++ b/content/posts/react/hooks.mdx
@@ -1,6 +1,6 @@
 ---
 title: Hooks
-summary: Resumen y uso de los Hooks en React
+summary: En este capítulo vamos a hablar acerca de los hooks en React.
 category: react
 tags:
   options:
@@ -9,8 +9,6 @@ tags:
 draft: false
 publishedAt: '2021-08-04T22:00:00.000Z'
 ---
-
-En este capítulo vamos a hablar acerca de los hooks en React.
 
 ¿Qué son los hooks?
 
