--- a/content/posts/javascript/spread-tricks.mdx
+++ b/content/posts/javascript/spread-tricks.mdx
@@ -1,11 +1,11 @@
 ---
 title: Spread Tricks
 summary: Los 5 y mas potentes trucos para Spread Operator
+category: javascript
 tags:
-  javascript:
-    - javascript
-    - es6
+  options:
     - spread
+    - javascript
 draft: false
 publishedAt: '2021-06-10T22:00:00.000Z'
 ---
