--- a/content/posts/react/context-api.mdx
+++ b/content/posts/react/context-api.mdx
@@ -1,6 +1,8 @@
 ---
 title: Context API
-summary: Cómo Context API puede sustituir a Redux
+summary: >-
+  La API de Contexto nos permite manejar el estado de nuestra aplicación sin
+  necesidad de utilizar Redux.
 category: react
 tags:
   options:
@@ -9,8 +11,6 @@ featured: true
 draft: false
 publishedAt: '2021-08-06T22:00:00.000Z'
 ---
-
-La API de Contexto nos permite manejar el estado de nuestra aplicación sin necesidad de utilizar `Redux`.
 
 ## Crear un contexto
 
