--- a/content/posts/javascript/ajax-async-await.mdx
+++ b/content/posts/javascript/ajax-async-await.mdx
@@ -1,7 +1,7 @@
 ---
 title: Usar async await con jQuery y ajax
 summary: >-
-  async/await es una característica bastante nueva. Fue añadida en la
+  Async/await es una característica bastante nueva. Fue añadida en la
   especificación ES2017 hace 4 años más o menos y ahora está disponible de forma
   nativa en la mayoría de los navegadores modernos. 
 category: javascript
