--- a/content/posts/chuletas/javascript-array.mdx
+++ b/content/posts/chuletas/javascript-array.mdx
@@ -1,15 +1,8 @@
 ---
 title: "Javascript Array \U0001F4D1"
 summary: Chuleta de metodos de array en Javascript
-tags:
-  generic:
-    - chuletas
-  javascript:
-    - javascript
-    - es6
-    - map
-    - filter
-    - reduce
+category: javascript
+tags: {}
 draft: false
 publishedAt: '2021-07-16T22:00:00.000Z'
 ---
