--- a/content/posts/chuletas/javascript.mdx
+++ b/content/posts/chuletas/javascript.mdx
@@ -4,10 +4,16 @@ summary: >-
   Cualquiera puede olvidar cómo buscar espacios en blanco con regex, eliminar un
   elemento de un Array o hacer un bucle For. Esta hoja de trucos básicos, trata
   de proporcionar una referencia básica para nosotros, los desarrolladores.
-category: javascript
+category: chuletas
 tags:
   options:
     - javascript
+    - chuletas
+    - es6
+    - fetch
+    - async-await
+    - spread
+    - destructuring
 draft: false
 publishedAt: '2021-07-08T22:00:00.000Z'
 ---
