--- a/content/posts/chuletas/mongo.mdx
+++ b/content/posts/chuletas/mongo.mdx
@@ -1,11 +1,12 @@
 ---
 title: "Mongo \U0001F4D1"
 summary: Chuleta de MongoDB
+category: chuletas
 tags:
-  generic:
-    - chuletas
-  db:
+  options:
     - mongodb
+    - terminal
+    - bash
 draft: false
 publishedAt: '2021-07-09T22:00:00.000Z'
 ---
