--- a/content/posts/linux/touchpad.mdx
+++ b/content/posts/linux/touchpad.mdx
@@ -1,6 +1,14 @@
 ---
 title: Restaurar Touchpad en Ubuntu
 summary: Volver a hacer que funcione el maldito touchpad en Ubuntu
+category: linux
+tags:
+  options:
+    - bash
+    - terminal
+    - ubuntu
+    - linux
+    - touchpad
 draft: false
 publishedAt: '2021-07-12T22:00:00.000Z'
 ---
