--- a/content/pages/home.mdx
+++ b/content/pages/home.mdx
@@ -12,10 +12,12 @@ blocks:
   - init: 0
     limit: 4
     _template: postMostViewedList
-  - init: 0
+  - title: Destacadas
+    init: 0
     limit: 6
     _template: postFeaturedList
-  - init: 0
+  - title: últimas entradas
+    init: 0
     limit: 6
     _template: postLatestsList
 ---
