--- a/content/pages/home.mdx
+++ b/content/pages/home.mdx
@@ -9,7 +9,8 @@ blocks:
     type: avatar
     _template: hero
   - _template: stats
-  - init: 0
+  - title: Más vistas
+    init: 0
     limit: 4
     _template: postMostViewedList
   - title: Destacadas
