--- a/content/posts/react/indice.mdx
+++ b/content/posts/react/indice.mdx
@@ -1,6 +1,16 @@
 ---
 title: Apuntes de React
 summary: Apuntes completos sobre React y su API
+category: react
+tags:
+  options:
+    - react
+    - hooks
+    - hoc
+relatedPosts:
+  postOne: content/posts/react/intro.mdx
+  postTwo: content/posts/react/functional-components.mdx
+  postThree: content/posts/react/class-components.mdx
 draft: false
 publishedAt: '2021-07-31T22:00:00.000Z'
 ---
